# attn-cpu

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  pyproject.toml
include/: attn.h  attn_api.h  attn_generic_m1.h  common.h  gemm.h  gemm_16x16.h  layout.h  online_softmax.h  pack_16x16.h  simd_math.h
include/kernels/: attn_dh16_m1_generic.h  attn_dh16_m4_nocausal.h  attn_dhk16_m4_nocausal.h  gemm_kernels_avx512.h  microkernel_16x8_avx512.h
python/attn_cpu/: __init__.py  mha_np.py
src/: attn_block.cpp  attn_dense.cpp  attn_dispatch.cpp  attn_mha.cpp  bindings.cpp  gemm.cpp  jit_gemm.cpp
tests/: test_attn_block.py  test_attn_dense.py  test_attn_step.py  test_matmul.py  test_mha.py
tests/bench/: bench_runner.py  bench_single.py
tests/perf/: bench_mha.py  matmul.py
